# sqlaf

./: .coveragerc  .flake8  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: linting.yml  release-test.yml  release.yml  security.yml  test.yml
sqlaf/: config.py  exceptions.py  operators.py  utils.py
sqlaf/fields/: __init__.py  base.py  fields.py  interfaces.py
sqlaf/filters/: __init__.py  filters.py  interfaces.py
tests/: base.py
tests/db/: alembic.ini  generate_migrations  migrate
tests/db/alembic/: env.py
tests/db/alembic/versions/: 10fff1c96965_generate_migrations.py  6da73feb70b3_generate_migrations.py  be81804c2167_generate_migrations.py
tests/fields/: test_arrayfield.py  test_boolean_field.py  test_char_field.py  test_custom_operators.py  test_datefield.py  test_datetimefield.py  test_enum_field.py  test_filter.py  test_integer_field.py  test_post_filter.py  test_timefield.py
tests/implementation/: db.py  factories.py  models.py
